--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>JDBC_01</module>
+        <module>JDBC_02</module>
     </modules>
 
 
