JDBC04 通过ResultSet执行查询操作

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>JDBC_01</module>
         <module>JDBC_02</module>
         <module>JDBC_03</module>
+        <module>JDBC_04</module>
     </modules>
 
 
