JDBC_06 以面向对象的方式编写JDBC程序

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>JDBC_02</module>
         <module>JDBC_03</module>
         <module>JDBC_04</module>
+        <module>JDBC_05</module>
+        <module>JDBC_06</module>
     </modules>
 
 
