--- a/JDBC_07/pom.xml
+++ b/JDBC_07/pom.xml
@@ -9,18 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>JDBC_04</artifactId>
+    <artifactId>JDBC_07</artifactId>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
-        </dependency>
-
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.6</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
